--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
 			<version>2.1.3</version>
 		</dependency>
 
-		<!--  <dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
